[tool.poetry]
name = "eoy-report-server"
version = "0.1.0"
description = ""
authors = ["Aleksey <sphota9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.0"
flask = "^1.1"
redis = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
